<?xml version="1.0"?>
<package>
  <name>team_diana_lib</name>
  <version>0.0.1</version>
  <description>C++14 utilities library</description>

  <maintainer email="clynamen@gmail.com">Vincenzo Giovanni Comito</maintainer>

  <license>MIT</license>

  <url type="website">http://team-diana.github.io/en/#!pages/team_diana_lib.md</url>

  <author email="clynamen@gmail.com">Vincenzo Giovanni Comito</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
